@@ -9,8 +9,8 @@
 # Contributors:
 # 	Xored Software Inc - initial API and implementation and/or initial documentation
 #*******************************************************************************
-export MAVEN_OPTS="-Xms512m -Xmx756m -XX:MaxPermSize=256m"
+export MAVEN_OPTS="-Xms512m -Xmx756m"
 
 OPTIONS="-Dtycho.localArtifacts=ignore $@"
 
-mvn clean verify -f releng/runner/pom.xml $OPTIONS || exit 105
+mvn clean install -f releng/runner/pom.xml $OPTIONS || exit 105
